# bulletproofs

./: Cargo.toml  README.md
benches/: r1cs.rs
src/: generators.rs  inner_product_proof.rs  lib.rs  linear_proof.rs  serdes.rs  transcript.rs  types.rs  util.rs
src/r1cs/: constraint_system.rs  linear_combination.rs  proof.rs  prover.rs  verifier.rs
src/range_proof/: dealer.rs  messages.rs  mod.rs  party.rs
tests/: r1cs.rs  range_proof.rs
