[package]
name = "bulletproofs"
# Before doing a release:
# - update version field 
# - update html_root_url
# - update CHANGELOG
version = "4.0.0"
authors = ["Cathie Yun <cathieyun@gmail.com>", 
           "Henry de Valence <hdevalence@hdevalence.ca>",
           "Oleg Andreev <oleganza@gmail.com>",
           "Michael Lodder <mike@litprotocol.com>",
]
readme = "README.md"
license = "MIT"
repository = "https://github.com/LIT-protocol/bulletproofs"
categories = ["cryptography"]
keywords = ["cryptography", "crypto", "zero-knowledge", "bulletproofs"]
description = "A pure-Rust implementation of Bulletproofs"
edition = "2021"

[dependencies]
group = "0.13"
bls12_381_plus = { version = "0.8", optional = true }
blstrs_plus = { version = "0.8", optional = true }
data-encoding = "2.6"
ed448-goldilocks-plus = { version = "0.13", optional = true }
elliptic-curve-tools = { version = "0.1.2", optional = true }
k256 = { version = "0.13", features = ["arithmetic", "hash2curve"], optional = true }
p256 = { version = "0.13", features = ["arithmetic", "hash2curve"], optional = true }
p384 = { version = "0.13", features = ["arithmetic", "bits", "hash2curve"], optional = true }
subtle = { version = "2.5", default-features = false }
sha2 = { version = "0.10", default-features = false, optional = true }
sha3 = { version = "0.10", default-features = false }
digest = { version = "0.10", default-features = false }
rand_core = { version = "0.6", default-features = false, features = ["alloc"] }
rand = { version = "0.8", default-features = false, optional = true }
byteorder = { version = "1", default-features = false }
serde = { version = "1", default-features = false, features = ["alloc", "serde_derive"] }
thiserror = { version = "1", optional = true }
merlin = { version = "3", default-features = false }
vsss-rs = { version = "4.3.8", features = ["curve25519"], optional = true }
zeroize = "1"

[dev-dependencies]
hex = "0.4"
criterion = "0.5"
bincode = "1"
rand_chacha = "0.3"
rstest = "0.23"
sha2 = "0.10"
vsss-rs = { version = "5.0.0-rc0", features = ["curve25519"] }

[features]
default = ["std", "curve25519"]
yoloproofs = []
std = ["rand", "rand/std", "rand/std_rng", "thiserror"]
nightly = ["subtle/nightly"]
docs = ["nightly"]
k256 = ["dep:k256", "dep:sha2"]
p256 = ["dep:p256", "dep:sha2"]
bls12_381 = ["dep:bls12_381_plus", "dep:sha2"]
bls12_381_std = ["dep:blstrs_plus", "dep:sha2"]
curve25519 = ["dep:vsss-rs", "dep:sha2"]
ed448 = ["dep:ed448-goldilocks-plus"]
p384 = ["dep:p384", "dep:sha2", "dep:elliptic-curve-tools"]

[package.metadata."docs.rs"]
all-features = true

[[test]]
name = "range_proof"

[[test]]
name = "r1cs"
required-features = ["yoloproofs"]

[[bench]]
name = "generators"
harness = false

[[bench]]
name = "linear_proof"
harness = false
