[package]
name = "bulletproofs"
# Before doing a release:
# - update version field 
# - update html_root_url
# - update CHANGELOG
version = "4.0.0"
authors = ["Cathie Yun <cathieyun@gmail.com>", 
           "Henry de Valence <hdevalence@hdevalence.ca>",
           "Oleg Andreev <oleganza@gmail.com>",
           "Michael Lodder <mike@litprotocol.com>",
]
readme = "README.md"
license = "MIT"
repository = "https://github.com/LIT-protocol/bulletproofs"
categories = ["cryptography"]
keywords = ["cryptography", "crypto", "zero-knowledge", "bulletproofs"]
description = "A pure-Rust implementation of Bulletproofs"
edition = "2024"

[dependencies]
blake2 = { version = "0.10", optional = true }
byteorder = { version = "1", default-features = false }
data-encoding = "2.9"
digest = { version = "0.10", default-features = false }
elliptic-curve-tools = { version = "0.1.2", optional = true }
merlin = { version = "3", default-features = false }
rand_core = { version = "0.6", default-features = false, features = ["alloc"] }
rand = { version = "0.8", default-features = false, optional = true }
subtle = { version = "2.6", default-features = false }
sha2 = { version = "0.10", default-features = false, optional = true }
sha3 = { version = "0.10", default-features = false }
serde = { version = "1", default-features = false, features = ["alloc", "serde_derive"] }
thiserror = { version = "2", optional = true }
zeroize = "1"

[dependencies.lit-rust-crypto]
git = "https://github.com/LIT-Protocol/lit-rust-crypto"
tag = "0.5.0"
features = [
    "arithmetic",
    "bits",
    "hash2curve",
    "serde",
    "zeroize",
]

[dev-dependencies]
hex = "0.4"
criterion = "0.7"
bincode = "1"
rand_chacha = "0.3"
sha2 = "0.10"

[features]
default = ["std"]
yoloproofs = []
std = ["rand", "rand/std", "rand/std_rng", "thiserror"]
nightly = ["subtle/nightly"]
docs = ["nightly"]
k256 = ["lit-rust-crypto/k256-default", "dep:sha2"]
p256 = ["lit-rust-crypto/p256-default", "dep:sha2"]
bls12_381 = ["lit-rust-crypto/bls12-381-plus-default", "dep:sha2"]
bls12_381_std = ["lit-rust-crypto/blstrs_plus", "dep:sha2"]
ristretto25519 = ["lit-rust-crypto/vsss-rs-default", "dep:sha2"]
ed25519 = ["lit-rust-crypto/curve25519-dalek-default", "lit-rust-crypto/vsss-rs-default", "dep:sha2"]
ed448 = ["lit-rust-crypto/ed448-goldilocks-default"]
p384 = ["lit-rust-crypto/p384-default", "dep:sha2", "dep:elliptic-curve-tools"]
decaf377 = ["lit-rust-crypto/decaf377-default", "dep:blake2"]
jubjub = ["lit-rust-crypto/jubjub-default", "dep:blake2", "dep:elliptic-curve-tools"]
pasta = ["lit-rust-crypto/pasta-default", "dep:blake2", "dep:elliptic-curve-tools"]

[package.metadata."docs.rs"]
all-features = true

[[test]]
name = "range_proof"

[[test]]
name = "r1cs"
required-features = ["yoloproofs"]

[[bench]]
name = "generators"
harness = false

[[bench]]
name = "linear_proof"
harness = false
